--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "@angular/platform-browser": "6.1.8",
     "@angular/platform-browser-dynamic": "6.1.8",
     "@angular/router": "6.1.8",
+    "@ionic-native/core": "5.0.0-beta.15",
+    "@ionic-native/splash-screen": "5.0.0-beta.15",
+    "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "4.0.0-beta.12",
     "@ionic/ng-toolkit": "1.0.0",
     "@ionic/schematics-angular": "1.0.0",
