--- a/package.json
+++ b/package.json
@@ -92,8 +92,7 @@
     "tsickle": "0.25.6",
     "tslint": "5.11.0",
     "typescript": "2.9.2",
-    "zone.js": "0.8.26",
-    "tar": "4.4.6"
+    "zone.js": "0.8.26"
   },
   "scripts": {
     "ng": "ng",
