--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-beta.19",
+    "@ionic/angular": "4.0.0-rc.0",
     "@ionic/ng-toolkit": "1.0.0",
     "@ionic/schematics-angular": "1.0.0",
     "@types/jasmine": "2.8.6",
