--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-rc.0",
+    "@ionic/angular": "4.0.1",
     "@ionic/ng-toolkit": "1.0.0",
     "@ionic/schematics-angular": "1.0.0",
     "@types/jasmine": "2.8.6",
@@ -76,7 +76,7 @@
     "gulp-rename": "1.4.0",
     "gulp-sass": "4.0.1",
     "gulp-uglify-es": "1.0.4",
-    "ionicons": "4.5.1",
+    "ionicons": "4.5.5",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "3.0.0",
