--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "2.5.3",
-    "gulp": "3.9.1",
+    "gulp": "4.0.2",
     "gulp-json-editor": "2.4.2",
     "gulp-rename": "1.4.0",
     "gulp-sass": "4.0.1",
@@ -112,7 +112,12 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
+  },
+  "dependencies": {
+    "cordova-ios": "^5.0.1",
+    "cordova-android": "7.0.0"
   }
 }
