--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp": "4.0.2",
     "gulp-json-editor": "2.4.2",
     "gulp-rename": "1.4.0",
-    "gulp-sass": "4.0.1",
+    "gulp-sass": "4.1.0",
     "gulp-uglify-es": "1.0.4",
     "ionicons": "~5.0.1",
     "jasmine-core": "2.99.1",
@@ -97,7 +97,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "gulp": "gulp"
   },
   "cordova": {
     "plugins": {
