--- a/package.json
+++ b/package.json
@@ -32,24 +32,23 @@
   "module": "ionic-selectable.js",
   "types": "ionic-selectable.d.ts",
   "peerDependencies": {
-    "@ionic/angular": ">=4.11.3",
-    "@angular/core": ">=8.1.2"
+    "@ionic/angular": ">=4.11.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.900.5",
-    "@angular-devkit/core": "~9.0.5",
-    "@angular-devkit/schematics": "~9.0.5",
-    "@angular/cli": "~9.0.5",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/compiler-cli": "~9.0.5",
-    "@angular/core": "~9.0.5",
-    "@angular/forms": "~9.0.5",
-    "@angular/language-service": "~9.0.5",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular-devkit/core": "~10.2.3",
+    "@angular-devkit/schematics": "~10.2.3",
+    "@angular/cli": "~10.2.3",
+    "@angular/common": "~10.2.4",
+    "@angular/compiler": "~10.2.4",
+    "@angular/compiler-cli": "~10.2.4",
+    "@angular/core": "~10.2.4",
+    "@angular/forms": "~10.2.4",
+    "@angular/language-service": "~10.2.4",
+    "@angular/platform-browser": "~10.2.4",
+    "@angular/platform-browser-dynamic": "~10.2.4",
+    "@angular/router": "~10.2.4",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
@@ -73,23 +72,23 @@
     "gulp-sass": "4.1.0",
     "gulp-uglify-es": "1.0.4",
     "ionicons": "~5.0.1",
-    "jasmine-core": "2.99.1",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.0.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.0",
-    "karma-jasmine": "1.1.1",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "ng-packagr": "9.0.2",
-    "protractor": "5.4.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.1.0",
+    "protractor": "~7.0.0",
     "rxjs": "~6.5.4",
     "sw-toolbox": "3.6.0",
     "ts-node": "7.0.0",
     "tsickle": "0.39.1",
-    "tslint": "5.11.0",
-    "typescript": "~3.7.5",
-    "zone.js": "~0.10.2",
-    "tslib": "^1.10.0"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.7",
+    "zone.js": "~0.10.3",
+    "tslib": "^2.0.0"
   },
   "scripts": {
     "ng": "ng",
@@ -98,7 +97,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "build.ng": "ng-packagr -p package.json"
   },
   "cordova": {
     "plugins": {
