--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "4.7.1",
+  "version": "4.8.0",
   "name": "ionic-selectable",
   "title": "Ionic Selectable",
   "description": "An Ionic component similar to Ionic Select, that allows to search items, including async search, group, add, edit, delete items, and much more.",
@@ -32,32 +32,32 @@
   "module": "ionic-selectable.js",
   "types": "ionic-selectable.d.ts",
   "peerDependencies": {
-    "@ionic/angular": ">=4.11.3"
+    "@ionic/angular": ">=5.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular-devkit/core": "~10.2.3",
-    "@angular-devkit/schematics": "~10.2.3",
-    "@angular/cli": "~10.2.3",
-    "@angular/common": "~10.2.4",
-    "@angular/compiler": "~10.2.4",
-    "@angular/compiler-cli": "~10.2.4",
-    "@angular/core": "~10.2.4",
-    "@angular/forms": "~10.2.4",
-    "@angular/language-service": "~10.2.4",
-    "@angular/platform-browser": "~10.2.4",
-    "@angular/platform-browser-dynamic": "~10.2.4",
-    "@angular/router": "~10.2.4",
+    "@angular-devkit/architect": "~0.1102.6",
+    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular-devkit/core": "~11.2.6",
+    "@angular-devkit/schematics": "~11.2.6",
+    "@angular/cli": "~11.2.6",
+    "@angular/common": "~11.2.7",
+    "@angular/compiler": "~11.2.7",
+    "@angular/compiler-cli": "~11.2.7",
+    "@angular/core": "~11.2.7",
+    "@angular/forms": "~11.2.7",
+    "@angular/language-service": "~11.2.7",
+    "@angular/platform-browser": "~11.2.7",
+    "@angular/platform-browser-dynamic": "~11.2.7",
+    "@angular/router": "~11.2.7",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "~5.0.4",
     "@ionic/angular-toolkit": "~2.0.0",
-    "@types/jasmine": "2.8.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "13.9.0",
-    "codelyzer": "~6.0.1",
+    "codelyzer": "^6.0.0",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -72,14 +72,14 @@
     "gulp-sass": "4.1.0",
     "gulp-uglify-es": "1.0.4",
     "ionicons": "~5.0.1",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
     "rxjs": "~6.5.4",
     "sw-toolbox": "3.6.0",
