--- a/package.json
+++ b/package.json
@@ -49,44 +49,44 @@
     "@angular/platform-browser": "~16.1.4",
     "@angular/platform-browser-dynamic": "~16.1.4",
     "@angular/router": "~16.1.4",
-    "@ionic-native/core": "5.0.0-beta.15",
-    "@ionic-native/splash-screen": "5.0.0-beta.15",
-    "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "~5.0.4",
-    "@ionic/angular-toolkit": "~2.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "2.0.3",
-    "@types/node": "13.9.0",
-    "codelyzer": "^6.0.0",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.4",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
+    "@ionic-native/core": "5.36.0",
+    "@ionic-native/splash-screen": "5.36.0",
+    "@ionic-native/status-bar": "5.36.0",
+    "@ionic/angular": "~7.1.2",
+    "@ionic/angular-toolkit": "~10.0.0",
+    "@types/jasmine": "~4.3.5",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "20.4.0",
+    "codelyzer": "^6.0.2",
+    "cordova-android": "12.0.0",
+    "cordova-plugin-device": "^2.1.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-splashscreen": "^6.0.2",
+    "cordova-plugin-statusbar": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "core-js": "2.5.3",
+    "core-js": "3.31.1",
     "gulp": "4.0.2",
-    "gulp-json-editor": "2.4.2",
-    "gulp-rename": "1.4.0",
-    "gulp-sass": "4.1.0",
-    "gulp-uglify-es": "1.0.4",
-    "ionicons": "~5.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "gulp-json-editor": "2.5.6",
+    "gulp-rename": "2.0.0",
+    "gulp-sass": "5.1.0",
+    "gulp-uglify-es": "3.0.0",
+    "ionicons": "~7.1.2",
+    "jasmine-core": "~5.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ng-packagr": "^16.1.0",
     "protractor": "~7.0.0",
-    "rxjs": "~6.5.4",
+    "rxjs": "~7.8.1",
     "sw-toolbox": "3.6.0",
-    "ts-node": "7.0.0",
-    "tsickle": "0.39.1",
+    "ts-node": "10.9.1",
+    "tsickle": "0.46.3",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5",
+    "typescript": "~5.1.6",
     "zone.js": "~0.13.1",
     "tslib": "^2.6.0"
   },
@@ -117,7 +117,7 @@
     ]
   },
   "dependencies": {
-    "cordova-ios": "^5.0.1",
-    "cordova-android": "7.0.0"
+    "cordova-ios": "^6.3.0",
+    "cordova-android": "12.0.0"
   }
 }
